# kloss

./: .gitignore  Cargo.toml  Makefile  README.md  x86_64-unknown-none-gnu.json
libs/bump_allocator/: Cargo.toml
libs/bump_allocator/src/: lib.rs
libs/hole_list_allocator/: Cargo.toml
libs/hole_list_allocator/src/: lib.rs
src/: idt.rs  lib.rs  vga_buffer.rs  xsdt.rs
src/acpi/: acpi_sdt.rs  apic.rs  mod.rs  rsdp.rs  rsdt.rs  sdt.rs
src/acpi/acpi_header/: mod.rs
src/arch/: mod.rs
src/arch/x86_64/: boot.asm  cpuid.rs  grub.cfg  interrupts.asm  linker.ld  long_mode_init.asm  mod.rs  util.asm
src/arch/x86_64/cpuid/: features.rs  mod.rs
src/io/: kbd.rs  mod.rs
src/irq/: asm_wrappers.rs  dispatch.rs  idt.rs  mod.rs  tests.rs
src/memory/: area_frame_allocator.rs  mod.rs
src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
src/msr/: mod.rs
src/pipe/: mod.rs
src/shell/: mod.rs
src/timers/: apict.rs  mod.rs  pit.rs
tests/: no_std_build.rs
