[package]
name = "banjos"
version = "0.1.0"
authors = ["Albin Stjerna <alst4459@student.uu.se>",
           "Daniel Ahlbom", "Fredrik Svensson",
           "Simon Lövgren"]

[lib]
crate-type = ["staticlib"]

[[test]]
# Setup for enabling critical functions for testing as we do not
# have stdlib at hand. Thanks to x86 crate.
name = "no_std_build"
harness = false


[dependencies]
rlibc = "0.1.4"
spin = "0.3.4"

[dependencies.x86]
version = "0.6.0"
default-features = false

[dependencies.multiboot2]
git = "https://github.com/phil-opp/multiboot2-elf64"

[dependencies.bitflags]
git = "https://github.com/phil-opp/bitflags.git"
branch = "no_std"

[dependencies.once]
git = "https://github.com/phil-opp/rust-once.git"

[dependencies.hole_list_allocator]
path = "libs/hole_list_allocator"
