[package]
name = "hole_list_allocator"
version = "0.1.0"
authors = ["Simon Lövgren <lovgren.simon@gmail.com>"]

[dependencies]
spin = "0.3.4"

[dependencies.linked_list_allocator]
git = "https://github.com/phil-opp/linked-list-allocator.git"

[dependencies.lazy_static]
version = "0.2.1"
features = ["spin_no_std"]
